fixed alignment issues in footer

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,6 +12,7 @@
 }
 .thefooter {
   min-height: 100px;
+  width: 100%;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   color: white;
@@ -22,4 +23,11 @@
   align-items: center;
   justify-content: center;
   /* position: sticky; */
+}
+.App {
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  align-items: center;
+  justify-content: space-between;
 }
