--- a/src/components/ChildComp/Child.module.css
+++ b/src/components/ChildComp/Child.module.css
@@ -1,7 +1,7 @@
 .wishListContainer {
   width: 90%;
   padding: 10px;
-  margin-top: 150px;
+  margin-top: 3%;
   margin-bottom: 50px;
   display: flex;
   flex-direction: column;
