--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #95c16b;
+  background-color: #94c06b;
 }
 
 code {
